# open3d-manage

./: .gitignore  CMakeLists.txt  README.md  ScreenCamera_2024-03-13-11-06-23.json  ScreenCamera_2024-03-18-21-21-32.json  ScreenCamera_2024-03-18-21-25-08.json  ScreenCamera_2024-03-18-21-26-53.json  compile.sh  demo.py  dev_setup.sh  filter.py  gen_noise.py  haha.py  run.sh  sample_image.py  server.py  setup.sh  test.py  test_compile.sh  test_run.sh  trans.py  view.py  vis_normal.py
3rd/Open3D-curvature-computation/: TotalCurvature.cpp  TotalCurvaturePointCloud.cpp
Open3D-curvature-computation/: CMakeLists.txt
include/: curvature.h  filter.h  io.h  knn.h  noise_dataset_loader.h  normal.h  pcd.h  sample.h  trans.h
include/Curvature/: CurvatureUtils.h  TotalCurvature.h  TotalCurvaturePointCloud.h  curvature_estimator.h  io.h  render.h
include/MeshSplit/: distance.h  idx_curvature.h  mesh_spliter.h  sub_mesh_manager.h  trans.h
open3d_manage/Config/: type.py
open3d_manage/Cpp/: filter.h  main.cpp
open3d_manage/Cpp/Data/: fixed_radius_index.h  kdtree.h  knn_index.h  metric.h  nano_flann_index.h
open3d_manage/Cpp/Data/src/: fixed_radius_index.cpp  knn_index.cpp  nano_flann_index.cpp  nns_index.cpp
open3d_manage/Cpp/Method/: normal.h
open3d_manage/Cpp/Method/src/: normal.cpp
open3d_manage/Cpp/Module/: nns.h
open3d_manage/Cpp/Module/src/: nns.cpp
open3d_manage/Cpp/include/: filter.h
open3d_manage/Cpp/src/: filter.cpp
open3d_manage/Demo/: filter.py  io.py  mesh_noise_adder.py  noise_adder.py  noise_dataset_generator.py  o3d_viewer.py  pcd_noise_adder.py  server.py  shape_image_sampler.py  trans.py
open3d_manage/Lib/open3d/core/nns/: KnnIndex.cpp  KnnIndex.h  NNSIndex.cpp  NNSIndex.h  NanoFlannImpl.h  NanoFlannIndex.cpp  NanoFlannIndex.h  NeighborSearchAllocator.h  NeighborSearchCommon.h
open3d_manage/Method/: curvature.py  filter.py  io.py  knn.py  noise.py  normal.py  render.py  trans.py  video.py
open3d_manage/Metric/: chamfer.py
open3d_manage/Module/: mesh_noise_adder.py  noise_adder.py  noise_dataset_generator.py  o3d_viewer.py  pcd_noise_adder.py  server.py  shape_image_sampler.py
open3d_manage/Test/: sample_point.py
src/: curvature.cpp  filter.cpp  io.cpp  knn.cpp  main.cpp  noise_dataset_loader.cpp  normal.cpp  pcd.cpp  sample.cpp  trans.cpp
src/Curvature/: CurvatureUtils.cpp  Draw.cpp  TotalCurvature.cpp  TotalCurvaturePointCloud.cpp  curvature_estimator.cpp  io.cpp  render.cpp
src/MeshSplit/: distance.cpp  idx_curvature.cpp  mesh_spliter.cpp  sub_mesh_manager.cpp  trans.cpp
